--- a/SEP21/SEP21.csproj
+++ b/SEP21/SEP21.csproj
@@ -1973,6 +1973,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Views\BaiViet\ForgetPass.cshtml" />
     <None Include="Views\Error\index.cshtml" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
