--- a/SEP21/Web.config
+++ b/SEP21/Web.config
@@ -23,9 +23,9 @@
 		<httpRuntime targetFramework="4.7.2" />
 		<pages validateRequest="false" />
 
-		<customErrors mode="On">
+		<!--<customErrors mode="On">
 			<error statusCode="404" redirect="~/Error/Index" />
-		</customErrors>
+		</customErrors>-->
 	</system.web>
 	<system.webServer>
 		<modules>
