--- a/SEP21/Web.config
+++ b/SEP21/Web.config
@@ -23,9 +23,19 @@
 		<httpRuntime targetFramework="4.7.2" />
 		<pages validateRequest="false" />
 
-		<!--<customErrors mode="On">
+		<customErrors mode="On" defaultRedirect="~/Error/Index">
+			<error statusCode="400" redirect="~/Error/Index" />
+			<error statusCode="401" redirect="~/Error/Index" />
+			<error statusCode="402" redirect="~/Error/Index" />
+			<error statusCode="403" redirect="~/Error/Index" />
 			<error statusCode="404" redirect="~/Error/Index" />
-		</customErrors>-->
+			<error statusCode="405" redirect="~/Error/Index" />
+			<error statusCode="406" redirect="~/Error/Index" />
+			<error statusCode="412" redirect="~/Error/Index" />
+			<error statusCode="500" redirect="~/Error/Index" />
+			<error statusCode="501" redirect="~/Error/Index" />
+			<error statusCode="502" redirect="~/Error/Index" />
+		</customErrors>
 	</system.web>
 	<system.webServer>
 		<modules>
